fix invisible text in input forms. Booyah

--- a/app/assets/stylesheets/base/form.scss
+++ b/app/assets/stylesheets/base/form.scss
@@ -13,7 +13,8 @@ textarea {
   color: black;
 
   &.input-large {
-    padding: 18px 8px;
+    padding: 8px 8px;
+    height: 44px;
     font-size: 24px;
     line-height: 40px;
   }
